# Data-structures-and-algorithms

./: .gitignore  README.md  task1-1.md
current_plans/: 2024_spring.md  2025_dist_part1.md  java_hints.md
current_plans/2023/: 2023_fall.md  readme.md
current_plans/2024/: 2024_dist_part2.md  2024_fall.md  2024_part_1.md  2024_part_2.md  2024_spring.md  2025_dist_part1.md
current_plans/2025/: 2024_part_2.md  2025_part_1.md  2025_part_2.md
current_plans/2026/: 2026_part_1.md  recap.md  Моудульные тесты ( pytest )
current_plans/2026/examples/: rec  rec.cpp
current_plans/2026/examples_ivtz23/: recap.cpp  recap2.cpp
current_plans/2026/examples_ivtz23/arrays/: arrays copy.cpp  arrays.cpp  arrays.h  recap1.cpp  recap2.cpp
current_plans/2026/examples_ivtz23/iterators/: main.cpp
current_plans/2026/examples_ivtz23/list/: list.cpp  main.cpp
current_plans/2026/examples_ivtz23/rec/: main.cpp  template.cpp
current_plans/2026/examples_ivtz23/trees/: main.cpp
current_plans/2026/list/: diagram.md  main.cpp
current_plans/2026/stack/: stack_seq_len.cpp
examples/cache/http_request/: http_request.cpp
examples/students_iterator/: CMakeLists.txt  main.cpp  students_iterator
examples/графы/: vk_graph.gephi
examples/графы/Данные_Библиометрия/: data_scopus gephi.graphml  data_scopus redact.xlsx
examples/графы/Данные_ВК/: Gephi_Атрибуты узлов.csv  Gephi_Граф.graphml  Gephi_Двусвязный список ребер.csv  Gephi_Матрица смежности.csv
tasks/: task_recursion.md  task_s1_alg_analysis.md  task_s1_class.md  task_s1_dynamic_programming.md  zipfs_law.md
